# ChangeLog for x11-base/x11-drm
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/x11-drm/ChangeLog,v 1.43 2006/11/25 18:06:47 kloeri Exp $

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  x11-drm-20060608.ebuild:
  Stable on Alpha.

  24 Sep 2006; <blubb@gentoo.org> x11-drm-20060608.ebuild:
  stable on amd64

  18 Sep 2006; Tim Yamin <plasmaroo@gentoo.org> x11-drm-20060608.ebuild:
  Stable on IA64; bug #112378.

  18 Sep 2006; Joseph Jezak <josejx@gentoo.org> x11-drm-20060608.ebuild:
  Marked ppc stable for bug #112378.

  10 Sep 2006; <ticho@gentoo.org> x11-drm-20060608.ebuild:
  Stable on x86, bug #112378.

  07 Sep 2006; Bryan Stine <battousai@gentoo.org> x11-drm-20051028.ebuild,
  x11-drm-20051223.ebuild, x11-drm-20060608.ebuild:
  Snapshot ebuilds is_kernel -> kernel_is. Bump 20060608 patchball version to
  0.2 with a new patch to define TRUE, FALSE if they don't already exist for
  some reason. Thanks to Alon Bar-Lev (bug #137712).

  01 Sep 2006; Bryan Stine <battousai@gentoo.org> x11-drm-20050807.ebuild,
  x11-drm-20051028.ebuild, x11-drm-20051223.ebuild, x11-drm-20060608.ebuild:
  Set valid WANT_AUTOCONF, bug #143429.

  31 Aug 2006; Bryan Stine <battousai@gentoo.org> x11-drm-20050502.ebuild,
  x11-drm-20050807.ebuild, x11-drm-20051028.ebuild, x11-drm-20051223.ebuild,
  x11-drm-20060608.ebuild:
  Fix linux-mod usage in pkg_postinst.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Update to my new email address.

  16 Jun 2006; Bryan Stine <battousai@gentoo.org> x11-drm-20051028.ebuild,
  x11-drm-20051223.ebuild, x11-drm-20060608.ebuild:
  Added a patch to 20051223 to fix building with 2.6.17, solving bug #129302.
  Implemented ebuild fixes for 2.4 module building, solving bug #96952.

*x11-drm-20060608 (08 Jun 2006)

  08 Jun 2006; Bryan Stine <battousai@gentoo.org> +x11-drm-20060608.ebuild:
  Bump to new snapshot.
