@@ -32,6 +32,10 @@ EBUILD x11-drm-20051223.ebuild 6384 RMD160 e28ebee2ce1caf5c90dc2e944a04911ba2c02
 MD5 95c3e96dee51eaca5684499b709a2b9b x11-drm-20051223.ebuild 6384
 RMD160 e28ebee2ce1caf5c90dc2e944a04911ba2c02089 x11-drm-20051223.ebuild 6384
 SHA256 1b38d0282cab1bfbbeb36bade40ea03a3604e8d50121aef958611afcadc464ac x11-drm-20051223.ebuild 6384
+EBUILD x11-drm-20060608-r1.ebuild 8632 RMD160 9c0c9d7f7cba95b46a7f8a63bb2203b20de6a3ae SHA1 cc75e1ce18b1057767db535841bc4e2a55efa138 SHA256 ac9b310cc3f4374562117c6eb5e085d41fb30ffc9e6dea78ef8b521b397f44e8
+MD5 4f38d936e97ff981a6e885f35043fb58 x11-drm-20060608-r1.ebuild 8632
+RMD160 9c0c9d7f7cba95b46a7f8a63bb2203b20de6a3ae x11-drm-20060608-r1.ebuild 8632
+SHA256 ac9b310cc3f4374562117c6eb5e085d41fb30ffc9e6dea78ef8b521b397f44e8 x11-drm-20060608-r1.ebuild 8632
 EBUILD x11-drm-20060608.ebuild 6376 RMD160 344926ccafbeb9dcc255104cab6569c6703f6f96 SHA1 61de65fc208106a93a7810ce0df0e164a35a128f SHA256 4cdc79e123eb0c04c892e289470236f98e15823cd5729767c0c776ef7f6d1d71
 MD5 f7f8ce4209fcee05755190b5df140954 x11-drm-20060608.ebuild 6376
 RMD160 344926ccafbeb9dcc255104cab6569c6703f6f96 x11-drm-20060608.ebuild 6376
@@ -40,10 +44,10 @@ EBUILD x11-drm-4.3.0-r7.ebuild 6983 RMD160 34eabe5596ed5609ef978dadc850431b61b3c
 MD5 7a519793ef2ad0ff85a9f90d59bb2ab9 x11-drm-4.3.0-r7.ebuild 6983
 RMD160 34eabe5596ed5609ef978dadc850431b61b3c6c8 x11-drm-4.3.0-r7.ebuild 6983
 SHA256 049580786153610b31973b4e041656da1189ebedbdee5cd2ae3f728b32be0fac x11-drm-4.3.0-r7.ebuild 6983
-MISC ChangeLog 21395 RMD160 167b354bb75141dd7b8be0f60fd4ec052ce2da76 SHA1 c61802a846a8f55f6bbae595138bd31721c5105d SHA256 817b26d4fa00b614069b4eeebfc1f7cee1b35497c510a843176d823e33d084f3
-MD5 1492d6a85ecba4edbb711342a2e77ad8 ChangeLog 21395
-RMD160 167b354bb75141dd7b8be0f60fd4ec052ce2da76 ChangeLog 21395
-SHA256 817b26d4fa00b614069b4eeebfc1f7cee1b35497c510a843176d823e33d084f3 ChangeLog 21395
+MISC ChangeLog 21640 RMD160 2533791bdd064c3c95fcc249ba721c4f9c619c07 SHA1 31ce060b652291a9384df84446f624d46b21b0f3 SHA256 d4f6fed4b10d6ceabd6d5d78bed65b83b8bf8d069f1a08dcde4a7bd1279212d9
+MD5 eedeaa476279b6d9c5680701a0e672d4 ChangeLog 21640
+RMD160 2533791bdd064c3c95fcc249ba721c4f9c619c07 ChangeLog 21640
+SHA256 d4f6fed4b10d6ceabd6d5d78bed65b83b8bf8d069f1a08dcde4a7bd1279212d9 ChangeLog 21640
 MISC metadata.xml 368 RMD160 cbe279aeafeae0af3633fbd1ecaa59d2f54579b8 SHA1 5104adf2f1ebe1ddffe4ca95e7b5e5f06267f842 SHA256 e73a5c428f39881de8ae5acf40958e8ad37a5fe92c2bb8cc4060704c9be45ef1
 MD5 782be9470cf76716a15aa5a70f4b8af7 metadata.xml 368
 RMD160 cbe279aeafeae0af3633fbd1ecaa59d2f54579b8 metadata.xml 368
@@ -63,6 +67,9 @@ SHA256 484c497bc5fe0de82872d1159be883711a93d74dcb29ad26a8d1d103c8eb35c2 files/di
 MD5 25e0af623be815585fdd845044e4e48e files/digest-x11-drm-20060608 578
 RMD160 8d8f952ce15390917b686efec62fbf4deba18712 files/digest-x11-drm-20060608 578
 SHA256 b0e147eed5017b8305847803abc08a8a82c25531edf27f4ef0005b32989fa121 files/digest-x11-drm-20060608 578
+MD5 25e0af623be815585fdd845044e4e48e files/digest-x11-drm-20060608-r1 578
+RMD160 8d8f952ce15390917b686efec62fbf4deba18712 files/digest-x11-drm-20060608-r1 578
+SHA256 b0e147eed5017b8305847803abc08a8a82c25531edf27f4ef0005b32989fa121 files/digest-x11-drm-20060608-r1 578
 MD5 db87006ec48bc9579dcdc989c5ed86d6 files/digest-x11-drm-4.3.0-r7 363
 RMD160 fb090eee55f87cb2a83cded1fdcd42c82d7f040d files/digest-x11-drm-4.3.0-r7 363
 SHA256 e25f7f22669877ab1a0b524b42acf09b30a2f4bdb61ca152d6c0e3736c190bbb files/digest-x11-drm-4.3.0-r7 363
