@@ -1,0 +1,6 @@
+MD5 b43b229f76a38ae31fd35c69733d00cb linux-drm-20060608-kernelsource.tar.bz2 568004
+RMD160 253608313539a651ad6724bcb67b5f4ab28eaf4f linux-drm-20060608-kernelsource.tar.bz2 568004
+SHA256 5f2346f3eba114c4d5655325f3fd51e0b74f6f627bf0c4e435103c8972f52731 linux-drm-20060608-kernelsource.tar.bz2 568004
+MD5 831398aec823d8c2a97738a09cafbda9 x11-drm-20060608-gentoo-0.2.tar.bz2 2355
+RMD160 ac7f0ffa100de58c140da02a23a69040af1f67bb x11-drm-20060608-gentoo-0.2.tar.bz2 2355
+SHA256 4539c6a855b0f3db7b57196c4dbf67f22a5ebc0d2050a5dc2fa715f8d2945136 x11-drm-20060608-gentoo-0.2.tar.bz2 2355
