@@ -1,6 +1,13 @@
 # ChangeLog for x11-base/x11-drm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/x11-drm/ChangeLog,v 1.43 2006/11/25 18:06:47 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/x11-drm/ChangeLog,v 1.44 2006/12/20 17:58:45 dberkholz Exp $
+
+*x11-drm-20060608-r1 (20 Dec 2006)
+
+  20 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  +x11-drm-20060608-r1.ebuild:
+  (#148572) Add FreeBSD support. Significant refactoring to keep OS-specific
+  stuff out of the main ebuild functions.
 
   25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
   x11-drm-20060608.ebuild:
